Релиз - отделение fabric8 в слой адаптер фраемворк